--- a/SportsOrganizer.Server/Resources/Components/Setup/DatabaseSetupComponent/DatabaseSetup.en.resx
+++ b/SportsOrganizer.Server/Resources/Components/Setup/DatabaseSetupComponent/DatabaseSetup.en.resx
@@ -123,11 +123,17 @@
   <data name="Database" xml:space="preserve">
     <value>Enter Database Name:</value>
   </data>
+  <data name="DatabaseError" xml:space="preserve">
+    <value>Database name mustn't be empty!</value>
+  </data>
   <data name="ErrorMessage" xml:space="preserve">
     <value>There has been an error!</value>
   </data>
   <data name="Password" xml:space="preserve">
     <value>Enter Password:</value>
+  </data>
+  <data name="PasswordError" xml:space="preserve">
+    <value>Password field mustn't be empty!</value>
   </data>
   <data name="SelectProviderInstructions" xml:space="preserve">
     <value>Select a database provider:</value>
@@ -135,11 +141,17 @@
   <data name="Server" xml:space="preserve">
     <value>Enter Server Name:</value>
   </data>
+  <data name="ServerError" xml:space="preserve">
+    <value>Server name mustn't be empty!</value>
+  </data>
   <data name="SuccessMessage" xml:space="preserve">
     <value>Database migrated successfully!</value>
   </data>
   <data name="Username" xml:space="preserve">
     <value>Enter Username:</value>
+  </data>
+  <data name="UsernameError" xml:space="preserve">
+    <value>Username field mustn't be empty!</value>
   </data>
   <data name="WarningMessage" xml:space="preserve">
     <value>Check inputs and try again!</value>
