--- a/SportsOrganizer.Server/Resources/Components/MainComponents/HeaderComponent/Header.en.resx
+++ b/SportsOrganizer.Server/Resources/Components/MainComponents/HeaderComponent/Header.en.resx
@@ -117,19 +117,25 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="GoHomeBtn" xml:space="preserve">
-    <value>Go Home</value>
+  <data name="Activities" xml:space="preserve">
+    <value>Activities</value>
   </data>
-  <data name="Oops" xml:space="preserve">
-    <value>Oops!</value>
+  <data name="ActivityResults" xml:space="preserve">
+    <value>Activity results</value>
   </data>
-  <data name="PageNotFoundTitle" xml:space="preserve">
-    <value>Page not found!</value>
+  <data name="Dashboard" xml:space="preserve">
+    <value>Dashboard</value>
   </data>
-  <data name="Text" xml:space="preserve">
-    <value>The page you’re looking for doesn’t exist.</value>
+  <data name="Homepage" xml:space="preserve">
+    <value>Homepage</value>
   </data>
-  <data name="Title" xml:space="preserve">
-    <value>Page not found.</value>
+  <data name="Login" xml:space="preserve">
+    <value>Login</value>
+  </data>
+  <data name="Logout" xml:space="preserve">
+    <value>Logout</value>
+  </data>
+  <data name="Welcome" xml:space="preserve">
+    <value>Welcome</value>
   </data>
 </root>
