--- a/SportsOrganizer.Server/Resources/Pages/Account/Login.en.resx
+++ b/SportsOrganizer.Server/Resources/Pages/Account/Login.en.resx
@@ -117,7 +117,40 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BtnTryLogin" xml:space="preserve">
+    <value>Login</value>
+  </data>
+  <data name="ErrorMessage" xml:space="preserve">
+    <value>There has been an error!</value>
+  </data>
+  <data name="IncorrectPasswordError" xml:space="preserve">
+    <value>Incorrect password!</value>
+  </data>
+  <data name="LoginTitle" xml:space="preserve">
+    <value>User login</value>
+  </data>
   <data name="PageTitle" xml:space="preserve">
     <value>Login</value>
+  </data>
+  <data name="Password" xml:space="preserve">
+    <value>Enter password:</value>
+  </data>
+  <data name="PasswordError" xml:space="preserve">
+    <value>Password field must not be empty!</value>
+  </data>
+  <data name="SuccessMessage" xml:space="preserve">
+    <value>Login successful</value>
+  </data>
+  <data name="Username" xml:space="preserve">
+    <value>Enter username:</value>
+  </data>
+  <data name="UsernameError" xml:space="preserve">
+    <value>Username field must not be empty!</value>
+  </data>
+  <data name="UserNotFoundError" xml:space="preserve">
+    <value>Username was not found!</value>
+  </data>
+  <data name="WarningMessage" xml:space="preserve">
+    <value>Check inputs and try again!</value>
   </data>
 </root>
