Add Scoring service, Change Index page and other files.

--- a/SportsOrganizer.Server/Resources/Pages/ActivityResults.en.resx
+++ b/SportsOrganizer.Server/Resources/Pages/ActivityResults.en.resx
@@ -117,7 +117,31 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Activity" xml:space="preserve">
+    <value>Activity</value>
+  </data>
+  <data name="Location" xml:space="preserve">
+    <value>Location</value>
+  </data>
   <data name="PageTitle" xml:space="preserve">
     <value>Activity results</value>
+  </data>
+  <data name="PlaceOfRanking" xml:space="preserve">
+    <value>Place of ranking</value>
+  </data>
+  <data name="Player" xml:space="preserve">
+    <value>Player</value>
+  </data>
+  <data name="Props" xml:space="preserve">
+    <value>Props</value>
+  </data>
+  <data name="Result" xml:space="preserve">
+    <value>Result</value>
+  </data>
+  <data name="Rules" xml:space="preserve">
+    <value>Rules</value>
+  </data>
+  <data name="Team" xml:space="preserve">
+    <value>Team</value>
   </data>
 </root>
