--- a/SportsOrganizer.Server/Resources/Pages/Index.en.resx
+++ b/SportsOrganizer.Server/Resources/Pages/Index.en.resx
@@ -117,7 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="NumberOfPoints" xml:space="preserve">
+    <value>Number of points</value>
+  </data>
   <data name="PageTitle" xml:space="preserve">
     <value>Homepage</value>
+  </data>
+  <data name="Place" xml:space="preserve">
+    <value>Place</value>
+  </data>
+  <data name="PlaceAchieved" xml:space="preserve">
+    <value>Place achieved in each task (task no.)</value>
+  </data>
+  <data name="Team" xml:space="preserve">
+    <value>Team</value>
   </data>
 </root>
