Change AuthenticatorService, Change InsertActivityResultsSelector page,...

--- a/SportsOrganizer.Server/Resources/Pages/User/Index.en.resx
+++ b/SportsOrganizer.Server/Resources/Pages/User/Index.en.resx
@@ -124,7 +124,7 @@
     <value>User control panel</value>
   </data>
   <data name="ResultEntering" xml:space="preserve">
-    <value>Result entering</value>
+    <value>Insert results</value>
   </data>
   <data name="ReviewResults" xml:space="preserve">
     <value>Review results</value>
