--- a/SportsOrganizer.Server/Resources/Pages/User/InsertActivityResultsSelector.en.resx
+++ b/SportsOrganizer.Server/Resources/Pages/User/InsertActivityResultsSelector.en.resx
@@ -120,4 +120,7 @@
   <data name="PageTitle" xml:space="preserve">
     <value>Insert activity results selector</value>
   </data>
+  <data name="Title" xml:space="preserve">
+    <value>Choose an activity for inserting results</value>
+  </data>
 </root>
