--- a/SportsOrganizer.Server/Resources/Pages/User/InsertActivityResults.en.resx
+++ b/SportsOrganizer.Server/Resources/Pages/User/InsertActivityResults.en.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="PageTitle" xml:space="preserve">
-    <value>Insert activity results</value>
+  <data name="Activity" xml:space="preserve">
+    <value>Activity</value>
   </data>
 </root>
