--- a/SportsOrganizer.Server/Resources/Pages/User/InsertActivityResults.en.resx
+++ b/SportsOrganizer.Server/Resources/Pages/User/InsertActivityResults.en.resx
@@ -120,4 +120,34 @@
   <data name="Activity" xml:space="preserve">
     <value>Activity</value>
   </data>
+  <data name="BtnSave" xml:space="preserve">
+    <value>Save result</value>
+  </data>
+  <data name="DistanceText" xml:space="preserve">
+    <value>Enter the distance in the format written in the rules.</value>
+  </data>
+  <data name="ErrorToast" xml:space="preserve">
+    <value>There has been an error!</value>
+  </data>
+  <data name="Player" xml:space="preserve">
+    <value>Player</value>
+  </data>
+  <data name="PointsText" xml:space="preserve">
+    <value>Enter the points in the format written in the rules.</value>
+  </data>
+  <data name="Result" xml:space="preserve">
+    <value>Insert the final result:</value>
+  </data>
+  <data name="SuccessToast" xml:space="preserve">
+    <value>Result has been entered successfully!</value>
+  </data>
+  <data name="Team" xml:space="preserve">
+    <value>Select a team:</value>
+  </data>
+  <data name="TimeText" xml:space="preserve">
+    <value>Enter time in the format written in the rules and selected by the browser settings (eg. 123,45).</value>
+  </data>
+  <data name="WarningToast" xml:space="preserve">
+    <value>Check inputs and try again!</value>
+  </data>
 </root>
