--- a/SportsOrganizer.Server/Resources/Shared/AdminLayout.en.resx
+++ b/SportsOrganizer.Server/Resources/Shared/AdminLayout.en.resx
@@ -117,7 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="PageTitle" xml:space="preserve">
-    <value>Admin control panel</value>
+  <data name="Homepage" xml:space="preserve">
+    <value>Homepage</value>
+  </data>
+  <data name="SportsOrganizerLogo" xml:space="preserve">
+    <value>Sports organizer logo</value>
   </data>
 </root>
