--- a/SportsOrganizer.Server/Resources/Pages/Admin/TeamManagement.en.resx
+++ b/SportsOrganizer.Server/Resources/Pages/Admin/TeamManagement.en.resx
@@ -123,11 +123,50 @@
   <data name="BtnDelete" xml:space="preserve">
     <value>Delete</value>
   </data>
+  <data name="BtnDeleteAll" xml:space="preserve">
+    <value>Delete all Teams</value>
+  </data>
   <data name="BtnEdit" xml:space="preserve">
     <value>Edit</value>
   </data>
+  <data name="BtnExport" xml:space="preserve">
+    <value>Export</value>
+  </data>
+  <data name="BtnExportExcel" xml:space="preserve">
+    <value>Export to EXCEL</value>
+  </data>
+  <data name="BtnExportPdf" xml:space="preserve">
+    <value>Export to PDF</value>
+  </data>
+  <data name="BtnExportXml" xml:space="preserve">
+    <value>Export to XML</value>
+  </data>
+  <data name="BtnPrint" xml:space="preserve">
+    <value>Print</value>
+  </data>
+  <data name="ConfModalContent" xml:space="preserve">
+    <value>Do you really want to delete all teams?</value>
+  </data>
+  <data name="ConfModalHeader" xml:space="preserve">
+    <value>Confirm deletion of all teams</value>
+  </data>
+  <data name="DataExportAndPrintingTitle" xml:space="preserve">
+    <value>Data Export &amp; Printing</value>
+  </data>
   <data name="EditData" xml:space="preserve">
     <value>Edit Data</value>
+  </data>
+  <data name="ep1" xml:space="preserve">
+    <value>This section allows you to export and print the data displayed in the data grid. You can export the data into various file formats, including PDF, Excel, and XML.</value>
+  </data>
+  <data name="ep2" xml:space="preserve">
+    <value>To export the data, simply click the 'Export' button and select the desired file format from the dropdown menu. The system will then generate the file and prompt you to save it to your computer.</value>
+  </data>
+  <data name="ep3" xml:space="preserve">
+    <value>In addition to exporting, you can also print the data directly from the page. Simply click the 'Print' button to open the print dialog box. From here, you can select your printer and adjust the print settings as needed.</value>
+  </data>
+  <data name="ep4" xml:space="preserve">
+    <value>Exporting and printing the data is a quick and easy way to share and analyze the data.</value>
   </data>
   <data name="p1" xml:space="preserve">
     <value>Welcome to the Team Management page!</value>
@@ -150,6 +189,9 @@
   <data name="PageTitle" xml:space="preserve">
     <value>Team management</value>
   </data>
+  <data name="SuccessToast" xml:space="preserve">
+    <value>Teams deleted successfully!</value>
+  </data>
   <data name="TeamName" xml:space="preserve">
     <value>Team Name</value>
   </data>
@@ -158,5 +200,8 @@
   </data>
   <data name="UniqueIdentifier" xml:space="preserve">
     <value>Unique Identifier</value>
+  </data>
+  <data name="WarningToast" xml:space="preserve">
+    <value>Can't delete teams because of existing activity results!</value>
   </data>
 </root>
