Fix bug in Activity Editor page.

--- a/SportsOrganizer.Server/Resources/Pages/Admin/ActivityEditor.en.resx
+++ b/SportsOrganizer.Server/Resources/Pages/Admin/ActivityEditor.en.resx
@@ -232,6 +232,6 @@
     <value>Unique Identifier</value>
   </data>
   <data name="WarningToast" xml:space="preserve">
-    <value>Can't delete activities because of existing activity results!</value>
+    <value>Can't delete activities because of existing activity results or users with activity permissions!</value>
   </data>
 </root>
