Resolve the issue with possible duplicates.

--- a/SportsOrganizer.Server/Resources/Components/AdminComponents/AdminActivityEditModalComponent/AdminActivityEditModal.en.resx
+++ b/SportsOrganizer.Server/Resources/Components/AdminComponents/AdminActivityEditModalComponent/AdminActivityEditModal.en.resx
@@ -147,6 +147,9 @@
   <data name="Distance" xml:space="preserve">
     <value>Distance</value>
   </data>
+  <data name="DuplicateWarning" xml:space="preserve">
+    <value>Duplicate warning!</value>
+  </data>
   <data name="EditTitle" xml:space="preserve">
     <value>Edit activity</value>
   </data>
