--- a/SportsOrganizer.Server/Resources/Components/AdminComponents/AdminTeamEditModalComponent/AdminTeamEditModal.en.resx
+++ b/SportsOrganizer.Server/Resources/Components/AdminComponents/AdminTeamEditModalComponent/AdminTeamEditModal.en.resx
@@ -132,6 +132,9 @@
   <data name="DeleteTitle" xml:space="preserve">
     <value>Delete team</value>
   </data>
+  <data name="DuplicateWarning" xml:space="preserve">
+    <value>Duplicate warning!</value>
+  </data>
   <data name="EditTitle" xml:space="preserve">
     <value>Edit team</value>
   </data>
