--- a/SportsOrganizer.Server/Resources/Components/AdminComponents/AdminUserEditModalComponent/AdminUserEditModal.en.resx
+++ b/SportsOrganizer.Server/Resources/Components/AdminComponents/AdminUserEditModalComponent/AdminUserEditModal.en.resx
@@ -138,6 +138,9 @@
   <data name="DeleteTitle" xml:space="preserve">
     <value>Delete user</value>
   </data>
+  <data name="DuplicateWarning" xml:space="preserve">
+    <value>Duplicate warning!</value>
+  </data>
   <data name="EditTitle" xml:space="preserve">
     <value>Edit user</value>
   </data>
