Add xml serializer service, and add xml export to admin pages.

--- a/SportsOrganizer.Server/Resources/Pages/Admin/ActivityEditor.en.resx
+++ b/SportsOrganizer.Server/Resources/Pages/Admin/ActivityEditor.en.resx
@@ -189,6 +189,9 @@
   <data name="ep4" xml:space="preserve">
     <value>Exporting and printing the data is a quick and easy way to share and analyze the data.</value>
   </data>
+  <data name="ErrorToast" xml:space="preserve">
+    <value>There has been an error!</value>
+  </data>
   <data name="Location" xml:space="preserve">
     <value>Location</value>
   </data>
