Fix a bug in BackUpAndRestore page, Add nuget package for pdf creation, and Change Resource files of the layout components.

--- a/SportsOrganizer.Server/Resources/Components/LayoutComponents/FooterComponent/Footer.en.resx
+++ b/SportsOrganizer.Server/Resources/Components/LayoutComponents/FooterComponent/Footer.en.resx
@@ -121,7 +121,7 @@
     <value>Activities</value>
   </data>
   <data name="ActivityResults" xml:space="preserve">
-    <value>Activity results</value>
+    <value>Results</value>
   </data>
   <data name="Dashboard" xml:space="preserve">
     <value>Dashboard</value>
