--- a/SportsOrganizer.Server/Resources/Components/LayoutComponents/FooterComponent/Footer.es.resx
+++ b/SportsOrganizer.Server/Resources/Components/LayoutComponents/FooterComponent/Footer.es.resx
@@ -121,7 +121,7 @@
     <value>Actividades</value>
   </data>
   <data name="ActivityResults" xml:space="preserve">
-    <value>Resultados de la actividad</value>
+    <value>Resultados</value>
   </data>
   <data name="Dashboard" xml:space="preserve">
     <value>Panel</value>
