--- a/SportsOrganizer.Server/Resources/Components/LayoutComponents/FooterComponent/Footer.fr.resx
+++ b/SportsOrganizer.Server/Resources/Components/LayoutComponents/FooterComponent/Footer.fr.resx
@@ -121,7 +121,7 @@
     <value>Activités</value>
   </data>
   <data name="ActivityResults" xml:space="preserve">
-    <value>Résultats d'activité</value>
+    <value>Résultats</value>
   </data>
   <data name="Dashboard" xml:space="preserve">
     <value>Tableau de bord</value>
