--- a/SportsOrganizer.Server/Resources/Components/LayoutComponents/FooterComponent/Footer.hr.resx
+++ b/SportsOrganizer.Server/Resources/Components/LayoutComponents/FooterComponent/Footer.hr.resx
@@ -121,7 +121,7 @@
     <value>Aktivnosti</value>
   </data>
   <data name="ActivityResults" xml:space="preserve">
-    <value>Rezultati aktivnosti</value>
+    <value>Rezultati</value>
   </data>
   <data name="Dashboard" xml:space="preserve">
     <value>Nadzorna ploča</value>
