--- a/SportsOrganizer.Server/Resources/Components/LayoutComponents/FooterComponent/Footer.it.resx
+++ b/SportsOrganizer.Server/Resources/Components/LayoutComponents/FooterComponent/Footer.it.resx
@@ -121,7 +121,7 @@
     <value>Attività</value>
   </data>
   <data name="ActivityResults" xml:space="preserve">
-    <value>Risultati dell'attività</value>
+    <value>Risultati</value>
   </data>
   <data name="Dashboard" xml:space="preserve">
     <value>Pannello di controllo</value>
