--- a/SportsOrganizer.Server/Resources/Components/LayoutComponents/FooterComponent/Footer.sl.resx
+++ b/SportsOrganizer.Server/Resources/Components/LayoutComponents/FooterComponent/Footer.sl.resx
@@ -121,7 +121,7 @@
     <value>dejavnosti</value>
   </data>
   <data name="ActivityResults" xml:space="preserve">
-    <value>Rezultati dejavnosti</value>
+    <value>Rezultati</value>
   </data>
   <data name="Dashboard" xml:space="preserve">
     <value>Nadzorna plošča</value>
