--- a/SportsOrganizer.Server/Resources/Components/LayoutComponents/FooterComponent/Footer.sr.resx
+++ b/SportsOrganizer.Server/Resources/Components/LayoutComponents/FooterComponent/Footer.sr.resx
@@ -121,7 +121,7 @@
     <value>Активности</value>
   </data>
   <data name="ActivityResults" xml:space="preserve">
-    <value>Резултати активности</value>
+    <value>Резултати</value>
   </data>
   <data name="Dashboard" xml:space="preserve">
     <value>Командна табла</value>
