--- a/SportsOrganizer.Server/Resources/Components/LayoutComponents/HeaderComponent/Header.de.resx
+++ b/SportsOrganizer.Server/Resources/Components/LayoutComponents/HeaderComponent/Header.de.resx
@@ -121,7 +121,7 @@
     <value>Aktivitäten</value>
   </data>
   <data name="ActivityResults" xml:space="preserve">
-    <value>Aktivitätsergebnisse</value>
+    <value>Ergebnisse</value>
   </data>
   <data name="ControlPanel" xml:space="preserve">
     <value>Schalttafel</value>
