--- a/SportsOrganizer.Server/Resources/Components/LayoutComponents/HeaderComponent/Header.fr.resx
+++ b/SportsOrganizer.Server/Resources/Components/LayoutComponents/HeaderComponent/Header.fr.resx
@@ -121,7 +121,7 @@
     <value>Activités</value>
   </data>
   <data name="ActivityResults" xml:space="preserve">
-    <value>Résultats d'activité</value>
+    <value>Résultats</value>
   </data>
   <data name="ControlPanel" xml:space="preserve">
     <value>Panneau de commande</value>
