--- a/SportsOrganizer.Server/Resources/Components/LayoutComponents/HeaderComponent/Header.hr.resx
+++ b/SportsOrganizer.Server/Resources/Components/LayoutComponents/HeaderComponent/Header.hr.resx
@@ -121,7 +121,7 @@
     <value>Aktivnosti</value>
   </data>
   <data name="ActivityResults" xml:space="preserve">
-    <value>Rezultati aktivnosti</value>
+    <value>Rezultati</value>
   </data>
   <data name="ControlPanel" xml:space="preserve">
     <value>Upravljačka ploča</value>
