--- a/SportsOrganizer.Server/Resources/Components/LayoutComponents/FooterComponent/Footer.hu.resx
+++ b/SportsOrganizer.Server/Resources/Components/LayoutComponents/FooterComponent/Footer.hu.resx
@@ -121,7 +121,7 @@
     <value>Tevékenységek</value>
   </data>
   <data name="ActivityResults" xml:space="preserve">
-    <value>A tevékenység eredményei</value>
+    <value>Eredmények</value>
   </data>
   <data name="Dashboard" xml:space="preserve">
     <value>Irányítópult</value>
