--- a/SportsOrganizer.Server/Resources/Components/LayoutComponents/HeaderComponent/Header.en.resx
+++ b/SportsOrganizer.Server/Resources/Components/LayoutComponents/HeaderComponent/Header.en.resx
@@ -121,7 +121,7 @@
     <value>Activities</value>
   </data>
   <data name="ActivityResults" xml:space="preserve">
-    <value>Activity results</value>
+    <value>Results</value>
   </data>
   <data name="ControlPanel" xml:space="preserve">
     <value>Control panel</value>
