--- a/SportsOrganizer.Server/Resources/Components/LayoutComponents/HeaderComponent/Header.sr.resx
+++ b/SportsOrganizer.Server/Resources/Components/LayoutComponents/HeaderComponent/Header.sr.resx
@@ -121,7 +121,7 @@
     <value>Активности</value>
   </data>
   <data name="ActivityResults" xml:space="preserve">
-    <value>Резултати активности</value>
+    <value>Резултати</value>
   </data>
   <data name="ControlPanel" xml:space="preserve">
     <value>Контролна табла</value>
